# ChangeLog for net-dns/avahi
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.207 2011/10/23 16:40:49 polynomial-c Exp $

  23 Oct 2011; Lars Wendler <polynomial-c@gentoo.org>
  +files/avahi-0.6.x-openrc-0.9.x-init-scripts-fixes.patch,
  avahi-0.6.29.ebuild, avahi-0.6.30.ebuild, avahi-0.6.30-r1.ebuild:
  non-maintainer commit: Replaced deprecated opts variable in init scripts (bug
  #383641).

  02 Oct 2011; Pacho Ramos <pacho@gentoo.org> avahi-0.6.30-r1.ebuild:
  Drop DEPRECATED flags, bug #384743

*avahi-0.6.30-r1 (14 Aug 2011)

  14 Aug 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +avahi-0.6.30-r1.ebuild,
  +files/avahi-0.6.30-optional-gtk-utils.patch:
  Add gtk3 and introspection support, make utilities optional, reorder deps to
  use COMMON_DEPEND, remove static libraries and .la files

  06 Aug 2011; Zac Medico <zmedico@gentoo.org> avahi-0.6.30.ebuild:
  Fix for prefix and add ~x86-linux keyword.

*avahi-0.6.30 (06 Apr 2011)

  06 Apr 2011; Sven Wegener <swegener@gentoo.org> +avahi-0.6.30.ebuild:
  Version bump.

  17 Mar 2011; Sven Wegener <swegener@gentoo.org>
  files/netlink-request-all-matches-when-requesting-interface.patch:
  Update netlink patch from git.

*avahi-0.6.29 (17 Mar 2011)

  17 Mar 2011; Sven Wegener <swegener@gentoo.org> +avahi-0.6.29.ebuild:
  Version bump, bug #358971.

  12 Mar 2011; Sven Wegener <swegener@gentoo.org>
  -files/avahi-0.6.24-cmsg_space.patch, -files/avahi-0.6.24-libintl.patch,
  -avahi-0.6.25-r1.ebuild, -avahi-0.6.27.ebuild, -avahi-0.6.27-r1.ebuild,
  -files/avahi-0.6.27-no-auto-activated.patch, -avahi-0.6.28.ebuild:
  Cleanup.

  05 Mar 2011; Raúl Porcel <armin76@gentoo.org> avahi-0.6.28-r1.ebuild:
  alpha/arm/ia64/s390/sh/sparc stable wrt #355583

  03 Mar 2011; Jeroen Roovers <jer@gentoo.org> avahi-0.6.28-r1.ebuild:
  Stable for HPPA (bug #355583).

  02 Mar 2011; Thomas Kahle <tomka@gentoo.org> avahi-0.6.28-r1.ebuild: