@@ -12,24 +12,18 @@ DIST avahi-0.6.29.tar.gz 1244081 RMD160 a0a4e1019cafb53a683ceceaa44605873957b6cd
 DIST avahi-0.6.30.tar.gz 1243534 RMD160 99dbc4f5711fd2962ac657811bebdb63947bd2c1 SHA1 5b77443537600a00770e4c77e3c443eeb5861d06 SHA256 f9e4316c2339d0020726edd846d01bee0c39980906db0c247479e5807457ff1f
 EBUILD avahi-0.6.28-r1.ebuild 4934 RMD160 7ebe1201b97f00f08a330211f8f81b07e3d17250 SHA1 4bc99179361a3a55234dbd6f646ce958bbe96e61 SHA256 fb564902531fd9e2059456b2e4659ac0f66ca6e8c1dc0911b9c7fc1cf6c1eed5
 EBUILD avahi-0.6.29.ebuild 4943 RMD160 33f586f04be104586802412233744aa696c4a8e2 SHA1 31c5d9270f3e80db1b000f1ffabc47e1ef271ed2 SHA256 e08eb60cfabdc32bfbf15da89d1f0ab427d94e2cd5825f61c151023add8ef159
-EBUILD avahi-0.6.30-r1.ebuild 5571 RMD160 b54383ca67a688eaac3dd59395622e7ebdc00540 SHA1 95eff668dd260ec7e60a5f5edb179d3298ef9be9 SHA256 b23fd1f3a4bb3f8f8de64add948f753b02c03f0a0d0b74e4f2b9eec86c27296d
+EBUILD avahi-0.6.30-r1.ebuild 5561 RMD160 730cfffb7de5e1ebaca4af067ffae41058652d88 SHA1 a6022d699a3e0598e6033d87659f908e6f9ae0ef SHA256 9cd10b49f6a0a25e3679a96e83ef809789cbd62d7b49a82552a9a38955008f28
 EBUILD avahi-0.6.30.ebuild 4969 RMD160 faa2918121ae7936f19bbf4769e93b6690e2cd48 SHA1 0b30a56b729f637b5c0b2ca09762afe45dec01b2 SHA256 f3d6780b562aefdb54752dc373290006e13a76ecf17a975e249bb88d67ee9514
-MISC ChangeLog 31078 RMD160 ec84a1f5dae582fd59c5b31b45426e008e014eca SHA1 e1c5b97020f69e9973fabdc88c43f29d7b9410f7 SHA256 2f8ccfe24b447a8b78c3f62d354dfb1d1c1cbcd0b6c17ca2f8c86d14caf15042
+MISC ChangeLog 31179 RMD160 72d0d5f6fbedc83547e0d4ca4cfc55add0630e88 SHA1 3bddecbbadcc5ee3ef188ab56f6e4abe6ecb000c SHA256 aab92e8507e7a28c1d243e891b289aa011720b09b0b6a35817a3991aafd52834
 MISC metadata.xml 892 RMD160 9bca92d3dc0b1ca1ebb7de98fcb6c414028ce376 SHA1 4c2a8a417838011d8a8027fd097661ab262e7bbc SHA256 37689509fa8cae032b27236bf754a0060a21c79c03faa11630f606996e6062cc
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJOpEOWAAoJEPiazRVxLXTFJhUP/A2IVX3GkIx10M9qippqz9Qc
-UTlZh+MbwxPCO50jafy5tiyBWEYGOL7QbBpu5mODvx67SI9xtxjaVnrIVhUT9eAE
-7QVP0s9RyFjZWHMj9ZJHlRJ/ddu0hkBXUafqgf7etyX8ZcjJ1AE5iDdr18/eqYT0
-Sm1SXHL6QmvvhpXkrWtyoK+IFyO11gRqJgIJpDeuAqlFzIfY4ewKXoWX/KM3RRAy
-uVfbVdSJ81BPxZ1bHlJhzsvw3MRhHjCb1uzOzA55GiNnPnlUjStOEgx3M0qjTDAD
-BRSspn4BmE5P7AV0UhsrRzfnQytC6rhbbWbhcVDJ/Llyiwkruj8M5JRjEBf1adnd
-oDflmyMc/dzshdRWh3OU1Nvd+VOslBjofOQspbb35YVTMvkTx+qil3nHvUdMFv54
-FxX+P5+U1QgYN296wA562gou5ERBEu41hRnqQiZ8K4UpACtLLILj6dtnJ4WABWBs
-6hjH9QVCXKq0BU1yAHNITKNJejDxyRdBMaHOsHlHSg7/ijkCmK0QIjaY72aG71cY
-BpQkqhsKg7VbC9Sdo1VVKyJ7bkxC0POcbXbhT528p16qq2I1WTCGlD2THdp+D3p8
-WkdMUhnglr4RENeeGGFoG4+PR28Tks0hPag7bek1OmHNw2uNcHIl1SbfmOOeizpD
-iDo/QENCg2QzecDf5Y+i
-=wMBg
+iQEcBAEBCgAGBQJO6dxsAAoJEOTDgjZ80txd1/MH/2LBtkftG+yMEKyshkCbwjWa
+WCT+Fk1dhhfW2DpApw6Je34vtDhUHxhQh4DMAT8cEU+VXkfwJKgfQ0Rw1EghplVy
+vmlHBV3v3lrv1fcPRbwiFiIvD9l131VuC+sel0fgZjIOW1DX5/da0TN2u8qaeq+q
+N+Kj0lyNPOBIZqjUIibRWS/jOCPbf+JUl4MjmHmJ0SJD4fa3IGjM+QYXMnB6dYFP
+gIrm4QsKlVzR0OfScs7OdWO12c4PemDo6Ap3hldDpUP2pji+P5SBB/7U1Vol+E5l
+WE5+8XQzBCP5EptE1IOiTDn9m0b2a46AF3OBHvRJFqrkKx0ZrGg1BB2cz1SgROI=
+=dK5c
 -----END PGP SIGNATURE-----
