@@ -1,6 +1,9 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.207 2011/10/23 16:40:49 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.208 2011/12/15 11:38:55 ago Exp $
+
+  15 Dec 2011; Agostino Sarubbo <ago@gentoo.org> avahi-0.6.30-r1.ebuild:
+  Stable for AMD64, wrt bug #393009
 
   23 Oct 2011; Lars Wendler <polynomial-c@gentoo.org>
   +files/avahi-0.6.x-openrc-0.9.x-init-scripts-fixes.patch,
